--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
           </div>
 
           <div class="hint" style="margin-top:6px">
-            Default caps: total layers ≤ 8, hidden nodes ≤ 12. With overrides enabled, angles accept any integer (still clamped to −180…180),
-            and caps above are used instead.
+            Disclaimer: Activating this section and using modified or unofficial networks may result in your progress being invalidated and removal from leaderboards.
           </div>
         </div>
       </section>
@@ -152,3 +151,4 @@
   <script src="create.js"></script>
 </body>
 </html>
+
