--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </label>
           </div>
 
-          <div class="hint" style="margin-top:6px">
+          <div class="hint">
             Disclaimer: Activating this section and using modified or unofficial networks may result in your progress being invalidated and removal from leaderboards.
           </div>
         </div>
@@ -151,4 +151,5 @@
   <script src="create.js"></script>
 </body>
 </html>
+
 
