--- a/index.html
+++ b/index.html
@@ -82,11 +82,19 @@
                                 <span class="pill warn" id="nnWarn" style="display:none">
 									</span>
                             </div>
-                            <div class="row tight" style="margin-top:6px">
+
+                            <!-- EDIT: both toggles shown with their output numbers -->
+                            <div class="row tight" style="margin-top:6px; flex-wrap:wrap; gap:12px;">
                                 <label class="row tight" style="align-items:center">
-                                    <input type="checkbox" id="nnOutput3" /> Enable Handbrake
+                                    <input type="checkbox" id="nnOutput3" />
+                                    Enable Handbrake
+                                </label>
+                                <label class="row tight" style="align-items:center">
+                                    <input type="checkbox" id="nnOutput4" />
+                                    Enable Brake
                                 </label>
                             </div>
+
                             <div id="hiddenLayers" class="panel" style="margin-top:10px">
                             </div>
                             <div class="row tight" style="margin-top:8px">
